# ubuntu-mqtt2ha-reporter

./: .gitignore  Cargo.toml  README.md  ubuntu-mqtt2ha-reporter.service
.github/workflows/: ci.yml  release.yml
assets/: 20-ubuntu-mqtt2ha-reporter  config.toml
debian/: postinst  postrm  prerm  ubuntu-mqtt2ha-reporter.service
src/: command.rs  command_subscriber.rs  config.rs  connections.rs  discovery_publisher.rs  machine_id.rs  main.rs  main_loop.rs  publisher.rs  sensor.rs  sensor_publisher.rs  sleep_monitor.rs
src/commands/: mod.rs  reboot.rs  suspend.rs
src/ha/: discovery.rs  mod.rs  values.rs
src/host/: connections.rs  dmi.rs  mod.rs
src/sensors/: apt.rs  cpu.rs  disk.rs  load.rs  memory.rs  mod.rs  monitor.rs  net.rs  reboot.rs
src/sensors/assets/: meminfo_1  net_dev_1  stat_1
src/utils/: mod.rs  parser.rs  serialize.rs  snake_case.rs
