[package]
name = "ubuntu-mqtt2ha-reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bitflags = "2"
futures-util = { version = "0.3", default-features = false }
hmac-sha256 = "1"
hostname = "0.4"
log = "0.4"
mimalloc = "0.1.43"
nix = { version = "0.29.0", features = ["feature"] }
pretty_env_logger = "0.5"
regex = "1"
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
time = { version = "0.3", features = ["formatting"] }
tokio-stream = { version = "0.1", default-features = false, features = ["io-util"] }
toml = "0.8"
uuid = "1"

[dependencies.tokio]
version = "1"
features = ["fs", "macros", "process", "rt", "rt-multi-thread", "sync", "time"]
