[package]
name = "ubuntu-mqtt2ha-reporter"
version = "0.1.6"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
bitflags = "2"
futures-util = { version = "0.3", default-features = false }
hmac-sha256 = "1"
hostname = "0.4"
log = "0.4"
mimalloc = "0.1.43"
nix = { version = "0.30", features = ["feature", "fs"] }
pretty_env_logger = "0.5"
regex = "1"
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
signal-hook = "0.3"
time = { version = "0.3", features = ["formatting"] }
tokio-stream = { version = "0.1", default-features = false, features = ["io-util"] }
toml = "0.9"
uuid = "1"
zbus = "4"

[dependencies.tokio]
version = "1"
features = ["fs", "macros", "process", "rt", "rt-multi-thread", "sync", "time"]

[package.metadata.deb]
maintainer = "Xidorn Quan <me@upsuper.org>"
copyright = "2024-2025 Xidorn Quan"
license-file = ["LICENSE", "4"]
extended-description = "A service that reports Ubuntu system status to Home Assistant via MQTT"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/ubuntu-mqtt2ha-reporter", "usr/local/bin/", "755"],
    ["assets/config.toml", "etc/ubuntu-mqtt2ha-reporter/", "644"],
    ["assets/20-ubuntu-mqtt2ha-reporter", "etc/sudoers.d/", "440"],
]
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
enable = true
start = false
